package ua.hillel.lessons.lesson25.demos._06_flyweight;

public class App {

    public static void main(String[] args) {
        Pharmacy pharmacy = new Pharmacy();
        // Дія усіх ліків разом
        pharmacy.drinkAllMedicines();
    }
}
