package ua.hillel.lessons.lesson25.demos._06_flyweight;

public interface Medicine {
    void drink();
}
