package ua.hillel.lessons.lesson25.demos._06_flyweight;

public enum MedicineType {
    ALPHA, BETA, GAMMA, DELTA, EPSILON
}
